--- a/scripts/templates/Binder.swift.erb
+++ b/scripts/templates/Binder.swift.erb
@@ -2,6 +2,7 @@ import Foundation
 import SpriteKit
 import RxSwift
 import RxCocoa
+<% headers.each do |header| %>import <%= header %><% end %>
 
 extension Reactive where Base: <%= class_name %> {
   <% properties.each do |property| %>
